# pxlpeep

./: .gitignore  CMakeLists.txt  ImageData.cpp  ImageData.h  ImageWindow.cpp  ImageWindow.h  MainDialog.cpp  MainDialog.h  MainDialog.ui  Makefile  Makefile.Debug  Makefile.Release  README.md  SetUnitDialog.cpp  SetUnitDialog.h  SetUnitDialog.ui  colormapper.h  definitions.h  loupe.icns  main.cpp  pxlpeep.desktop  pxlpeep.pro  pxlpeep.qrc  pxlpeep.sh  template.plist  ui_MainDialog.h
build-pxlpeep-Desktop_Qt_5_12_1_GCC_64bit-Debug/: .qmake.stash  Makefile  moc_predefs.h  pxlpeep  qrc_pxlpeep.cpp  ui_MainDialog.h
build-pxlpeep-Desktop_Qt_5_12_1_GCC_64bit-Release/: Makefile  moc_ImageWindow.cpp  moc_MainDialog.cpp  moc_predefs.h  pxlpeep  qrc_pxlpeep.cpp
profontwin/: v1_vs_v2.txt
test_images/: 100x100 f grey.tif  33x100 f grey.tif  3x5 grey.tif  4x4 1bit.tif  CMYK.tif  f.tif  test.tif  test2.tif
